# Chzzk-Rekoda

./: README.ko.md  README.md  chzzk_record.py  config.json  config.py  gui.bat  gui.py  pyproject.toml  settings.py  start.bat
plugin/: chzzk.py
regacy/: gui
